tenant/infra/virtualservice-webhook-ci.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: webhook-ci
spec:
  hosts:
  - webhook.ci.pauwelslabs.com
  gateways:
  - ${infranamespaceprefix}istio-ingress/pauwels-labs
  http:
  - name: "pauwels-labs"
    match:
    - uri:
        prefix: "/${tenantname}"
    rewrite:
      uri: "/"
    route:
    - destination:
        port:
          number: 8080
        host: el-github
